# translatable

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-MIT  Makefile  README-MACROS.md  README.md  SECURITY.md  codecov.yml  flake.nix  rust-lsp-config.toml  rust-toolchain.toml  rustfmt.toml  translatable.toml
.github/: SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  config.yml
.github/workflows/: overall-coverage.yml  pr-coverage.yml  publish.yml
src/: config.rs  languages.rs  lib.rs  macros.rs  translations.rs
src/translations/: errors.rs  generation.rs  mod.rs  utils.rs
translatable/: Cargo.toml
translatable/src/: error.rs  lib.rs
translatable/tests/: README.md  dynamic.rs  integration.rs  integration_tests.rs  static.rs  test.rs  tests.rs  ui.rs  unitary_tests.rs
translatable/tests/dynamic/: invalid_syntax.rs  invalid_syntax.stderr  valid_syntax.rs
translatable/tests/dynamic/args/: empty_args.rs  extra_args.rs  inherit_args.rs  inherit_extra_args.rs  invalid_identifier.rs  invalid_identifier.stderr  with_args.rs
translatable/tests/environments/everything_valid/translations/: test.toml
translatable/tests/fixtures/translations/: common.toml  test.toml
translatable/tests/integration/: mod.rs
translatable/tests/integration/config/: fail_config_invalid_enums.rs  fail_config_invalid_enums.stderr  fail_config_path_missmatch.rs  fail_config_path_missmatch.stderr  fail_translations_malformed.rs  fail_translations_malformed.stderr
translatable/tests/integration/context/: context_macro.rs  fail_disallowed_type.rs  fail_disallowed_type.stderr  fail_fallback_is_raw.rs  fail_fallback_is_raw.stderr  fail_invalid_base_path.rs  fail_invalid_base_path.stderr  fail_invalid_fallback.rs  fail_invalid_fallback.stderr  fail_no_fallback_is_result.rs  fail_no_fallback_is_result.stderr  mod.rs  pass_fallback_catch.rs  pass_invalid_runtime_language.rs  pass_without_params.rs
translatable/tests/integration/environments/translations_malformed/translations/: test.toml
translatable/tests/integration/language/: fail_static_invalid.rs  fail_static_invalid.stderr  mod.rs  pass_dynamic_enum.rs  pass_dynamic_expr.rs  pass_dynamic_invalid_runtime.rs  pass_static_lowercase.rs  pass_static_uppercase.rs
translatable/tests/integration/path/: fail_static_nonexistent.rs  fail_static_nonexistent.stderr  mod.rs  pass_dynamic_expr.rs  pass_static_existing.rs
translatable/tests/integration/templates/: fail_invalid_ident.rs  fail_not_display.stderr  mod.rs  pass_ident_ref.rs  pass_trailing_comma_no_args.rs
translatable/tests/integration/translation/: mod.rs
translatable/tests/integration/translation/language/: fail_static_invalid.stderr  mod.rs  pass_dynamic_enum.rs  pass_dynamic_invalid_runtime.rs
translatable/tests/integration/translation/path/: fail_generic_arguments.rs  fail_generic_arguments.stderr  fail_static_nonexistent.rs  fail_static_nonexistent.stderr  mod.rs  pass_static_existing.rs
translatable/tests/integration/translation/templates/: fail_invalid_ident.stderr  fail_not_display.rs  fail_not_display.stderr  fail_value_not_found.rs  fail_value_not_found.stderr  mod.rs  pass_multiple_templates.rs  pass_trailing_comma.rs
translatable/tests/static/: invalid_args.rs  invalid_args.stderr  invalid_syntax.rs  invalid_syntax.stderr  missing_args.rs  missing_args.stderr
translatable/tests/static/args/: empty_args.rs  extra_args.rs  inherit_args.rs  inherit_extra_args.rs  invalid_identifier.rs  invalid_identifier.stderr  with_args.rs
translatable/tests/translations/: test.toml
translatable/tests/ui/environments/config_invalid_value/: translatable.toml
translatable/tests/ui/environments/config_invalid_value/translations/: test.toml
translatable/tests/ui/environments/config_path_missmatch/: translatable.toml
translatable/tests/ui/fail/: invalid_lang.rs  invalid_lang.stderr  missing_path.rs  missing_path.stderr  path_with_generics.rs  path_with_generics.stderr
translatable/tests/ui/pass/: dynamic_ok.rs  empty_args.rs  extra_args.rs  static_ok.rs
translatable/tests/unitary/: collection_generation.rs  display_to_error_tokens.rs  language_enum.rs  mod.rs  runtime_error.rs  templating.rs  translation_collection.rs
translatable_proc/: Cargo.toml  README-MACROS.md
translatable_proc/src/: languages.rs  lib.rs  macros.rs
translatable_proc/src/data/: config.rs  mod.rs  translations.rs
translatable_proc/src/generation/: mod.rs
translatable_proc/src/macro_generation/: context.rs  mod.rs  translation.rs
translatable_proc/src/macro_input/: context.rs  input_type.rs  mod.rs  translation.rs
translatable_proc/src/macro_input/utils/: mod.rs  translation_path.rs
translatable_proc/src/translations/: errors.rs  generation.rs  mod.rs
translatable_proc/src/utils/: collections.rs  errors.rs  mod.rs
translatable_shared/: Cargo.toml  README-SHARED.md
translatable_shared/src/: language.rs  languages.rs  lib.rs  nesting_type.rs  utils.rs
translatable_shared/src/macros/: collections.rs  errors.rs  mod.rs  templating.rs
translatable_shared/src/misc/: language.rs  mod.rs  templating.rs
translatable_shared/src/sources/: config.rs  mod.rs  translations.rs
translatable_shared/src/structures/: file_position.rs  file_related_error.rs  inline_meta_variable.rs  item_type.rs  language.rs  mod.rs  path.rs  templated_string.rs  translatable_error.rs  translation_tree.rs
translatable_shared/src/translations/: collection.rs  mod.rs  node.rs
translations/: test.toml
