[package]
name = "translatable"
description = "A robust internationalization solution for Rust featuring compile-time validation, ISO 639-1 compliance, and TOML-based translation management. "
repository = "https://github.com/FlakySL/translatable.rs"
license = "MIT OR Apache-2.0"
readme = "../README.md"
version = "0.1.0"
edition = "2024"
authors = ["Esteve Autet <esteve@memw.es>", "Chiko <chiko@envs.net>"]
keywords = [
    "i18n",
    "translations",
    "idioms",
    "languages",
    "internazionalization",
]

[dependencies]
thiserror = "2.0.12"
translatable_proc = { path = "../translatable_proc" }
translatable_shared = { path = "../translatable_shared/" }

[dev-dependencies]
trybuild = "1.0.104"
