[package]
name = "translatable"
description = "A robust internationalization solution for Rust featuring compile-time validation, ISO 639-1 compliance, and TOML-based translation management. "
repository = "https://github.com/FlakySL/translatable"
license = "GPL-3.0"
readme = "../README.md"
version = "1.0.0"
edition = "2024"
authors = ["Esteve Autet <esteve@memw.es>", "Chiko <chiko@envs.net>"]
keywords = [
    "i18n",
    "translations",
    "idioms",
    "languages",
    "internazionalization",
]

[dependencies]

[dev-dependencies]
