[package]
name = "translatable_proc"
description = "Proc macro crate for the translatable library."
repository = "https://github.com/FlakySL/translatable.rs"
license = "MIT OR Apache-2.0"
readme = "../README-MACROS.md"
version = "0.1.0"
edition = "2024"
authors = ["Esteve Autet <esteve@memw.es>", "Chiko <chiko@envs.net>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.38"
strum = { version = "0.27.1", features = ["derive"] }
syn = { version = "2.0.98", features = ["full"] }
thiserror = "2.0.11"
toml = "0.8.20"
translatable_shared = { path = "../translatable_shared/" }
