[package]
name = "translatable_proc"
description = "Proc macro crate for the translatable library."
repository = "https://github.com/FlakySL/translatable"
license = "GPL-3.0"
readme = "../README-MACROS.md"
version = "1.0.0"
edition = "2024"
authors = ["Esteve Autet <esteve@memw.es>", "Chiko <chiko@envs.net>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
