[package]
name = "translatable_shared"
description = "Shared dependencies crate for translatable."
repository = "https://github.com/FlakySL/translatable"
license = "GPL-3.0"
readme = "../README-SHARED.md"
version = "1.0.0"
edition = "2024"
authors = ["Esteve Autet <esteve@memw.es>", "Chiko <chiko@envs.net>"]

[dependencies]
dyn_path = "1.0.7"
edit-distance = "2.1.3"
proc-macro2 = { version = "1.0.95", optional = true }
quote = { version = "1.0.40", optional = true }
strum = { version = "0.27.1", features = ["derive"] }
syn = { version = "2.0.101", features = ["full"], optional = true }
thiserror = "2.0.12"
toml_edit = "0.22.27"
walkdir = { version = "2.5.0", optional = true }

[features]
default = []
internal = [
	"proc-macro2",
	"quote",
	"syn",
	"walkdir"
]
